--- a/index.html
+++ b/index.html
@@ -74,14 +74,18 @@
 </section>
 
 <section class="section">
-    <h2>Полезные советы</h2>
+    <h2>Полезное для здоровья</h2>
         <p><a href="advise.html">Воспользуйтесь нашими советами для поддержания здоровья!</a></p>
+ <p><a href="map.html">Найти фитнес-клубы поблизости</a></p>
+
 </section>
 
 <section class="section">
     <h2>Наши сервисы</h2>
     <p><a href="menu.html">Генератор меню на неделю</a></p>
     <p><a href="calendar.html">Календарь для отслеживания состояния здоровья</a></p>
+    <p><a href="calculator.html">Калькулятор индекса массы тела (ИМТ)</a></p>
+
 </section>
 
 <footer>
