--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <section class="section">
     <h2>Наши сервисы</h2>
-    <img src="C:\Users\Таня\Desktop\project folder\statics\1436585.png" alt="Наши сервисы">
+    <img src="1436585.png" alt="Наши сервисы">
     <div class="buttons">
         <button onclick="location.href='menu.html'">Генератор меню</button>
         <button onclick="location.href='trainings.html'">План тренировок</button>
