--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <section class="section">
     <h2>Полезное для здоровья</h2>
-    <img src="statics\2449846.png" alt="Советы по здоровью">
+    <img src="img\2449846.png" alt="Советы по здоровью">
     <div class="buttons">
         <button onclick="location.href='advise.html'">Советы для здоровья</button>
         <button onclick="location.href='map.html'">Фитнес-клубы поблизости</button>
@@ -110,7 +110,7 @@
 
 <section class="section">
     <h2>Наши сервисы</h2>
-    <img src="statics\1436585.png" alt="Наши сервисы">
+    <img src="img\1436585.png" alt="Наши сервисы">
     <div class="buttons">
         <button onclick="location.href='menu.html'">Генератор меню</button>
         <button onclick="location.href='trainings.html'">План тренировок</button>
