--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <header>
     <h1>Aura</h1>
-    <p>Путь к здоровью, гармонии и благополучию</p>
+    <p>Ваш веб-помощник для отслеживания состояния здоровья</p>
 </header>
 
 <section class="hero">
