--- a/menu.html
+++ b/menu.html
@@ -91,8 +91,25 @@
       <option value="high">Высокая активность (тренировки каждый день)</option>
     </select>
 
-    <label for="diet">Особенности организма (диета, предпочтения):</label>
-    <input type="text" id="diet" placeholder="Например: вегетарианец, аллергия на глютен и т.д.">
+    <label for="goal">Цель диеты:</label>
+    <select id="goal" required>
+    	<option value="maintain">Поддержание веса</option>
+    	<option value="lose">Похудение</option>
+    	<option value="gain">Набор веса</option>
+    </select>
+
+    <label for="diet">Особенности питания:</label>
+    <select id="diet">
+      <option value="обычное">Обычное</option>
+      <option value="вегетарианец">Вегетарианец</option>
+    </select>
+    
+    <select id="goal" required>
+	<option value="maintain">Поддержание веса</option>
+  	<option value="lose">Похудение</option>
+	<option value="gain">Набор веса</option>
+    </select>
+
 
     <button type="submit">Создать меню</button>
   </form>
@@ -100,82 +117,58 @@
   <div id="menu" class="menu"></div>
 </div>
 
+
+
 <script>
-  // Генерация меню на основе данных
+  const mealsByType = {
+    'Завтрак': ['Овсянка с ягодами', 'Яичница с помидорами', 'Тосты с авокадо'],
+    'Обед': ['Паста с томатным соусом и курицей', 'Картошка, тушеная с говядиной', 'Постный рассольник с грибами', 'Овощной пирог'],
+    'Полдник': ['Салат с тунцом', 'Смузи с бананом', 'Сырники со сгущенкой'],
+    'Ужин': ['Гратен из кабачков и помидоров', 'Гречневая каша с яйцом', 'Запеканка из картофеля и мясного фарша']
+  };
+
+  const caloriesInfo = {
+  "Овсянка с ягодами": "103.6 ккал на 100 г",
+  "Яичница с помидорами": "129.9 ккал на 100 г",
+  "Тосты с авокадо": "153.2 ккал на 1 тост",
+  "Куриная грудка с овощами": "62.2 ккал на 100 г",
+  "Паста с томатным соусом и курицей": "222.1 ккал на 100 г",
+  "Картошка, тушеная с говядиной": "129.7 ккал на 100 г",
+  "Постный рассольник с грибами": "50.2 ккал на 100 г",
+  "Овощной пирог": "111 ккал на 100 г",
+  "Салат с тунцом": "187 ккал на 100 г",
+  "Смузи с бананом": "71.1 ккал на 100 г",
+  "Сырники со сгущенкой": "280 ккал на 2 шт.",
+  "Гратен из кабачков и помидоров": "178.1 ккал на 100 г",
+  "Гречневая каша с яйцом": "119.9 ккал на 100 г",
+  "Запеканка из картофеля и мясного фарша": "134.1 ккал на 100 г",
+};
+
+  function generateMeal(mealType, diet) {
+    const vegetarianBlacklist = ['куриц', 'говядин', 'фарш', 'тушк', 'тунец'];
+    const meals = mealsByType[mealType].filter(name => {
+      return diet !== 'вегетарианец' || !vegetarianBlacklist.some(word => name.toLowerCase().includes(word));
+    });
+    const randomName = meals[Math.floor(Math.random() * meals.length)];
+    const calories = caloriesInfo[randomName] || 'нет данных';
+    return `${randomName} – ${calories}`;
+  }
+
   function generateMenu(gender, age, weight, height, activity, diet) {
     const menu = [];
     const meals = ['Завтрак', 'Обед', 'Полдник', 'Ужин'];
-
-    const calories = calculateCalories(gender, age, weight, height, activity);
-
-    let dailyCalories = calories / 7; // распределение калорий на 7 дней
-
     for (let i = 0; i < 7; i++) {
-      const dayMenu = [];
-      meals.forEach(meal => {
-        dayMenu.push({
-          meal: meal,
-          recipe: generateMeal(dailyCalories, diet)
-        });
+      const dayMenu = meals.map(mealType => {
+        return {
+          meal: mealType,
+          recipe: generateMeal(mealType, diet)
+        };
       });
-      menu.push({
-        day: `День ${i + 1}`,
-        meals: dayMenu
-      });
+      menu.push({ day: `День ${i + 1}`, meals: dayMenu });
     }
     return menu;
   }
 
-  // Расчет необходимого количества калорий в день
-  function calculateCalories(gender, age, weight, height, activity) {
-    let BMR;
-
-    // Формулы для расчета базового обмена веществ (BMR)
-    if (gender === 'male') {
-      BMR = 66 + (13.75 * weight) + (5 * height) - (6.75 * age);
-    } else {
-      BMR = 655 + (9.56 * weight) + (1.85 * height) - (4.68 * age);
-    }
-
-    // Учитываем уровень активности
-    let activityFactor;
-    switch (activity) {
-      case 'low':
-        activityFactor = 1.2;
-        break;
-      case 'moderate':
-        activityFactor = 1.55;
-        break;
-      case 'high':
-        activityFactor = 1.9;
-        break;
-    }
-
-    return BMR * activityFactor;
-  }
-
-  // Генерация блюда на основе калорий и диеты
-  function generateMeal(dailyCalories, diet) {
-    let mealOptions = [
-      { name: 'Овсянка с ягодами', calories: 300 },
-      { name: 'Куриная грудка с овощами', calories: 400 },
-      { name: 'Тосты с авокадо', calories: 350 },
-      { name: 'Салат с тунцом', calories: 250 },
-      { name: 'Яичница с помидорами', calories: 350 },
-      { name: 'Паста с томатным соусом', calories: 500 },
-      { name: 'Смузи с бананом', calories: 200 }
-    ];
-
-    if (diet.toLowerCase().includes("вегетарианец")) {
-      mealOptions = mealOptions.filter(meal => !meal.name.includes('курица') && !meal.name.includes('тушка'));
-    }
-
-    // Выбираем случайное блюдо из доступных
-    const randomMeal = mealOptions[Math.floor(Math.random() * mealOptions.length)];
-    return `${randomMeal.name} - ${randomMeal.calories} калорий`;
-  }
-
-  // Обработка формы и вывод меню
   document.getElementById('userForm').addEventListener('submit', function(event) {
     event.preventDefault();
 
@@ -188,12 +181,12 @@
 
     const menu = generateMenu(gender, age, weight, height, activity, diet);
 
-    // Отображаем меню
     let menuHtml = '<h3>Ваше меню на неделю:</h3>';
     menu.forEach(day => {
       menuHtml += `<div class="meal"><h4>${day.day}</h4>`;
       day.meals.forEach(meal => {
-        menuHtml += `<p><strong>${meal.meal}:</strong> ${meal.recipe}</p>`;
+        menuHtml += `<p><strong>${meal.meal}:</strong> ${
+meal.recipe}</p>`;
       });
       menuHtml += '</div>';
     });
@@ -201,9 +194,11 @@
     document.getElementById('menu').innerHTML = menuHtml;
   });
 </script>
+
+
 <footer>
     <p>&copy; 2024 Aura.</p>
-    <p><a href="file:///C:/Users/%D0%A2%D0%B0%D0%BD%D1%8F/Desktop/project%201/forma.htm">Обратная связь</a></p>
+    <p><a href="#">Обратная связь</a></p>
 </footer>
 </body>
 </html>
