--- a/trainings.html
+++ b/trainings.html
@@ -1,97 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aura - Генератор тренировок</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f7f6;
-            color: #333;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aura - Генератор тренировок</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f7f6;
+      margin: 0;
+      padding: 0;
+      color: #333;
     }
-        header {
-            background-color: #6a8d73;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-        header h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-
-        .container {
-            width: 80%;
-            max-width: 600px;
-            margin: 20px auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        label {
-            font-size: 1em;
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        input, select {
-            width: 100%;
-            padding: 10px;
-            font-size: 1em;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        button {
-            background-color: #6a8d73;
-            color: white;
-            font-size: 1em;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        .results {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-        }
-
-        .video-section {
-            margin-top: 30px;
-        }
-
-        .video-container {
-            margin-top: 10px;
-        }
-
-        iframe {
-            width: 100%;
-            height: 315px;
-            border: none;
-            border-radius: 10px;
-         }
-         text-block {
-            background-color: #e3f2fd;
-        }
-
-        footer {
+    header {
+      background-color: #6a8d73;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    .container {
+      max-width: 700px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+    }
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border:  1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1em;
+    }
+    button {
+      background-color: #6a8d73;
+      color: white;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      background-color: #4f6e59;
+    }
+    .results {
+      margin-top: 20px;
+      white-space: pre-line;
+      background: #eef7f0;
+      padding: 15px;
+      border-radius: 10px;
+    }
+    .video-section {
+      margin-top: 40px;
+    }
+    .video-container {
+      margin: 20px auto;
+      max-width: 560px;
+      aspect-ratio: 16 / 9;
+      position: relative;
+    }
+    .video-container iframe {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      border: none;
+      border-radius: 10px;
+    }
+    .reminder {
+      margin-top: 40px;
+      background-color: #fff3cd;
+      padding: 20px;
+      border-radius: 10px;
+      border: 1px solid #ffeeba;
+      color: #856404;
+    }
+    footer {
             background-color: #333;
             color: white;
             text-align: center;
@@ -101,116 +90,138 @@
             color: #8dbf8f;
             text-decoration: none;
         }
-
-    </style>
+  </style>
 </head>
 <body>
- <header>
-  <h1>Aura</h1>
-  <p>Генератор тренировочного плана</p>
-</header>
+  <header>
+    <h1>Aura</h1>
+    <p>Генератор индивидуального тренировочного плана</p>
+  </header>
+  <div class="container">
+    <form id="workoutForm">
+      <label for="gender">Пол:</label>
+      <select id="gender" required>
+        <option value="">Выберите...</option>
+        <option value="male">Мужской</option>
+        <option value="female">Женский</option>
+      </select>
 
+      <label for="age">Возраст:</label>
+      <input type="number" id="age" min="10" max="100" required />
 
-    <div class="container">
-        <h2>Генератор тренировочного плана</h2>
-        <form id="workoutForm">
-            <div class="form-group">
-                <label for="gender">Пол</label>
-                <select id="gender" required>
-                    <option value="">Выберите...</option>
-                    <option value="male">Мужской</option>
-                    <option value="female">Женский</option>
-                </select>
-            </div>
+      <label for="weight">Вес (кг):</label>
+      <input type="number" id="weight" min="30" max="300" required />
 
-            <div class="form-group">
-                <label for="age">Возраст</label>
-                <input type="number" id="age" min="10" max="100" required>
-            </div>
+      <label for="height">Рост (см):</label>
+      <input type="number" id="height" min="100" max="250" required />
 
-            <div class="form-group">
-                <label for="weight">Вес (кг)</label>
-                <input type="number" id="weight" min="30" max="300" required>
-            </div>
+      <label for="goal">Цель тренировок:</label>
+      <select id="goal" required>
+        <option value="">Выберите...</option>
+        <option value="lose_weight">Похудение</option>
+        <option value="gain_muscle">Набор мышц</option>
+        <option value="improve_fitness">Общая форма</option>
+      </select>
 
-            <div class="form-group">
-                <label for="height">Рост (см)</label>
-                <input type="number" id="height" min="100" max="250" required>
-            </div>
+      <label for="level">Уровень подготовки:</label>
+      <select id="level" required>
+        <option value="">Выберите...</option>
+        <option value="beginner">Новичок</option>
+        <option value="intermediate">Средний</option>
+        <option value="advanced">Продвинутый</option>
+      </select>
 
-            <div class="form-group">
-                <label for="goal">Цель тренировок</label>
-                <select id="goal" required>
-                    <option value="">Выберите...</option>
-                    <option value="lose_weight">Похудение</option>
-                    <option value="gain_muscle">Набор мышечной массы</option>
-                    <option value="improve_fitness">Улучшение физической формы</option>
-                </select>
-            </div>
+      <label for="sessions">Тренировок в неделю:</label>
+      <input type="number" id="sessions" min="1" max="7" required />
 
-            <div class="form-group">
-                <label for="sessions">Количество тренировок в неделю</label>
-                <input type="number" id="sessions" min="1" max="7" required>
-            </div>
+      <button type="button" onclick="generatePlan()">Создать план</button>
+    </form>
 
-            <button type="button" onclick="generatePlan()">Создать план</button>
-        </form>
+    <div class="results" id="results"></div>
 
-        <div class="results" id="results"></div>
-
-        <div class="video-section">
-            <h3>Рекомендуемые видеокурсы</h3>
-            <div class="video-container">
-                <iframe width="720" height="405" src="https://rutube.ru/play/embed/b0467adb90dcd8a173769cbd058c39cc/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
-            <div class="video-container">
-                <iframe width="720" height="405" src="https://rutube.ru/play/embed/f7a9d78dcb0e886cdc3f18540937fa74/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>
-        </div>
+    <div class="video-section">
+      <h3>Рекомендуемые видеокурсы</h3>
+      <div class="video-container">
+        <iframe src="https://rutube.ru/play/embed/b0467adb90dcd8a173769cbd058c39cc/" allowfullscreen></iframe>
+      </div>
+      <div class="video-container">
+        <iframe src="https://rutube.ru/play/embed/f7a9d78dcb0e886cdc3f18540937fa74/" allowfullscreen></iframe>
+      </div>
     </div>
 
-    <script>
-        function generatePlan() {
-            const gender = document.getElementById("gender").value;
-            const age = document.getElementById("age").value;
-            const weight = document.getElementById("weight").value;
-            const height = document.getElementById("height").value;
-            const goal = document.getElementById("goal").value;
-            const sessions = document.getElementById("sessions").value;
+    <div class="reminder">
+      <strong>Напоминание:</strong> Спортивные эксперты советуют делать не больше 2-3 тренировок в неделю. Не забывайте про отдых.
+    </div>
+  </div>
 
-            if (!gender || !age || !weight || !height || !goal || !sessions) {
-                alert("Пожалуйста, заполните все поля!");
-                return;
-            }
+  <script>
+    function generatePlan() {
+      const gender = document.getElementById("gender").value;
+      const age = parseInt(document.getElementById("age").value);
+      const weight = parseInt(document.getElementById("weight").value);
+      const height = parseInt(document.getElementById("height").value);
+      const goal = document.getElementById("goal").value;
+      const sessions = parseInt(document.getElementById("sessions").value);
+      const level = document.getElementById("level").value;
 
-            let plan = "";
+      if (!gender || !age || !weight || !height || !goal || !sessions || !level) {
+        alert("Пожалуйста, заполните все поля!");
+        return;
+      }
 
-            if (goal === "lose_weight") {
-                plan = `Ваш план на ${sessions} тренировок в неделю:
-                \n- Кардио: 3-4 раза в неделю, по 30-40 минут.
-                \n- Силовые тренировки: 2 раза в неделю.
-                \n- Упражнения с весом собственного тела.`;
-            } else if (goal === "gain_muscle") {
-                plan = `Ваш план на ${sessions} тренировок в неделю:
-                \n- Силовые тренировки: 4-5 раз в неделю.
-                \n- Упор на тяжелые базовые упражнения.
-                \n- Обязательно растяжка после каждой тренировки.`;
-            } else if (goal === "improve_fitness") {
-                plan = `Ваш план на ${sessions} тренировок в неделю:
-                \n- Кардио: 2-3 раза в неделю.
-                \n- Силовые тренировки: 2-3 раза в неделю.
-                \n- Йога или пилатес для улучшения гибкости.`;
-            }
+      let plan = `Индивидуальный план тренировок\n\nЦель: ${goal === 'lose_weight' ? 'Похудение' : goal === 'gain_muscle' ? 'Набор мышечной массы' : 'Общая физическая форма'}\nПол: ${gender === 'male' ? 'Мужской' : 'Женский'}\nВозраст: ${age} лет\nВес: ${weight} кг\nРост: ${height} см\nУровень подготовки: ${level === 'beginner' ? 'Новичок' : level === 'intermediate' ? 'Средний' : 'Продвинутый'}\nТренировок в неделю: ${sessions}\n\n`;
 
-            document.getElementById("results").innerText = plan;
+      let workouts = [];
+
+      const baseExercises = {
+        beginner: {
+          cardio: "Кардио (ходьба, лёгкий бег, орбитрек — 20-30 мин)",
+          strength: "Силовая (с весом тела: приседания, отжимания, планка)",
+          fullBody: "Функциональная (простые круговые упражнения)",
+          flexibility: "Растяжка и йога",
+          recovery: "Прогулка или лёгкая разминка"
+        },
+        intermediate: {
+          cardio: "Кардио (интервальный бег, вело, эллипс — 30 мин)",
+          strength: "Силовая (гантели, тренажёры, круговые)",
+          fullBody: "Функциональная (HIIT, табата, комплексы)",
+          flexibility: "Йога или пилатес",
+          recovery: "Прогулка, плавание или активное восстановление"
+        },
+        advanced: {
+          cardio: "Кардио (интенсивные интервалы, степ, бег в гору)",
+          strength: "Силовая (сплит-тренировки, свободные веса)",
+          fullBody: "Функциональная (силовая выносливость, кроссфит)",
+          flexibility: "Глубокая растяжка, йога",
+          recovery: "Медитация, холодный душ, растяжка"
         }
-    </script>
-       <div class="text-block">
-    <p>Напоминание! Спортивные эксперты советуют делать не больше 2-3 тренировок в неделю. Не забывайте про отдых.</p>
-</div>
+      };
+
+      const exercises = baseExercises[level];
+
+      for (let i = 0; i < sessions; i++) {
+        let day = `День ${i + 1}: `;
+        if (goal === "lose_weight") {
+          day += i % 2 === 0 ? exercises.cardio : exercises.fullBody;
+        } else if (goal === "gain_muscle") {
+          day += i % 2 === 0 ? exercises.strength : exercises.recovery;
+        } else {
+          if (i % 3 === 0) day += exercises.cardio;
+          else if (i % 3 === 1) day += exercises.strength;
+          else day += exercises.flexibility;
+        }
+        workouts.push(day);
+      }
+
+      plan += workouts.join("\n") + "\n\nРекомендации:\n- Пейте достаточно воды.\n- Следите за техникой.\n- Разминка и заминка обязательны.\n- Отдыхайте хотя бы 1 день в неделю.";
+
+      document.getElementById("results").innerText = plan;
+    }
+  </script>
 <footer>
     <p>&copy; 2024 Aura.</p>
     <p><a href="file:///C:/Users/%D0%A2%D0%B0%D0%BD%D1%8F/Desktop/project%201/forma.htm">Обратная связь</a></p>
-
+</footer>
 </body>
 </html>
+
